--- a/README.rdoc
+++ b/README.rdoc
@@ -70,7 +70,7 @@ Additionally, this behaviour can be changed by changing the +config.action_contr
 
 In Gemfile:
 
-    gem 'strong_parameters'
+    gem 'strongly_typed_parameters'
 
 and then run `bundle`. To activate the strong parameters, you need to include this module in
 every model you want protected.
@@ -87,5 +87,4 @@ This will allow you to remove / not have to use +attr_accessible+ and do mass as
 
 == Compatibility
 
-This plugin is only fully compatible with Rails versions 3.0, 3.1 and 3.2 but not 4.0+, as it is part of Rails Core in 4.0.
-An unofficial Rails 2 version is {strong_parameters_rails2}[https://github.com/grosser/strong_parameters/tree/rails2].
+This plugin is only fully compatible with Rails versions 3.0, 3.1 and 3.2 but not 4.0+, as the non-typechecking version is part of Rails Core in 4.0.
